--- a/zalando-pg/templates/postgresql.yaml
+++ b/zalando-pg/templates/postgresql.yaml
@@ -23,10 +23,18 @@ spec:
   enableLogicalBackup: true
   logicalBackupSchedule: {{ .backup.logicalSchedule | default "30 00 * * *" | quote }}
   {{- end }}
-  {{- if and .backup .backup.wal_s3_bucket }} 
+  {{- if and .Values.backup .Values.backup.wal_s3_bucket }} 
   env:
   - name: WAL_S3_BUCKET
-    value: {{ .backup.wal_s3_bucket | quote }}
+    value: {{ .Values.backup.wal_s3_bucket | default "" | quote }}
+    {{- if .Values.backup.backupSchedule }}
+  - name: BACKUP_SCHEDULE
+    value: {{ .Values.backup.backupSchedule | quote }}
+    {{- end }}
+    {{- if .Values.backup.backupNumRetain }}
+  - name: BACKUP_NUM_TO_RETAIN
+    value: {{ .Values.backup.backupNumRetain | quote }}
+    {{- end }}
   {{- end }}
   postgresql:
     version: {{ .version | default "13" | quote }}
