--- a/zalando-pg/values.yaml
+++ b/zalando-pg/values.yaml
@@ -32,7 +32,6 @@ numberOfInstances: 2
 
 # postgresql parameters
 parameters:
-parameters:
   listen_addresses: "*"
   max_wal_senders: "10"
   max_wal_size: 4GB
@@ -66,4 +65,7 @@ affinityValue: "ssd"
 backup:
   logicalEnable: false
   # logicalSchedule: "30 00 * * *"
-  customWalS3Bucket: false
+  # Values for pg_basebackups and WAL backups. If bucket is not set, backups will not run.
+  # walS3Bucket: bucketnnameForPGBasebackupAndWals
+  # backupSchedule: BACKUP_SCHEDULE: "10 17 * * MON"
+  # backupNumRetain: 4
