changed preset settings and values to only apply during initial install, not upgrades. TODO: make this configurable in the values

--- a/tenant/templates/preset-values.job.yaml
+++ b/tenant/templates/preset-values.job.yaml
@@ -5,7 +5,7 @@ kind: Job
 metadata:
   name: {{ $.Release.Name }}-preset-values-{{ .tenantId }}
   annotations:
-    "helm.sh/hook": "post-install,post-upgrade"
+    "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "10" 
 spec:
   template:
