Versuche, Speicherplatz für das init-Skript über Volume-Claim bereit zu stellen.   - das beißt sich aber mit der Konfig-Map

--- a/zalando-pg/templates/folio.init.job.yaml
+++ b/zalando-pg/templates/folio.init.job.yaml
@@ -40,6 +40,8 @@ spec:
           mountPath: "/usr/src/app/kube-scripts"
       volumes:
       - name: scriptvolume
+      # persistentVolumeClaim:
+      #      claimName: pvc-folio-scripts
         configMap:
           name: {{ $.Release.Name }}-scripts
           defaultMode: 0555
@@ -47,5 +49,18 @@ spec:
       restartPolicy: Never
   backoffLimit: 10
   ttlSecondsAfterFinished: 3600
+# Der persistentVolumeClaim für das Init Script.
 ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: pvc-folio-scripts
+#   namespace: folio-backend
+# spec:
+#   storageClassName: local-path
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 1Gi
 {{- end }}
