--- a/zalando-pg/values.yaml
+++ b/zalando-pg/values.yaml
@@ -24,7 +24,7 @@ resources:
     cpu: "4"
     memory: "4Gi"
   limits:
-    cpu: "16"
+    cpu: "8"
     memory: "16Gi"
 
 teamId: "folio"
@@ -33,29 +33,39 @@ numberOfInstances: 2
 # postgresql parameters
 parameters:
   listen_addresses: "*"
-  max_wal_senders: "10"
-  max_wal_size: 4GB
-  max_connections: "1200"
-  db_user_namespace: "off"
+  max_connections: "100"
   password_encryption: "md5"
-  effective_io_concurrency: "2"
-  max_locks_per_transaction: "64"
+  db_user_namespace: "off"
+  shared_buffers: "128MB"
+  temp_buffers: "8MB"
   max_prepared_transactions: "0"
-  max_replication_slots: "10"
-  temp_buffersi: "128MB"
-  wal_keep_segments: "32"
+  work_mem: "4MB"
+  maintenance_work_mem: "64MB"
+  effective_io_concurrency: "1"
+  max_worker_processes: "8"
+
   wal_level: "replica"
-  wal_log_hints: "true"
-  archive_mode: "on"
-  archive_timeout: "120"
-  checkpoint_timeout: "3000"
-  effective_cache_size: "24GB"
-  maintenance_work_mem: "256MB"
-  max_worker_processes: "12"
-  shared_buffers: "16GB"
-  temp_buffers: "256MB"
-  # wal_level: "minimal"
-  work_mem: "256MB"
+  wal_log_hints: "off"
+  checkpoint_timeout: "5min"
+  max_wal_size: "1GB"
+  archive_mode: "off"
+  archive_timeout: "0"
+  max_wal_senders: "10"
+  max_replication_slots: "10"
+  wal_keep_segments: "0"
+  effective_cache_size: "4GB"
+
+  log_line_prefix: "%m [%p] %q%u@%d "
+  log_timezone: 'Europe/Berlin'
+  datestyle: "iso, dmy"
+  timezone: 'Europe/Berlin'
+  lc_messages: 'C'
+  lc_monetary: 'de_DE.UTF-8'
+  lc_numeric: 'de_DE.UTF-8'
+  lc_time: 'de_DE.UTF-8'
+  default_text_search_config: 'pg_catalog.german'
+
+  max_locks_per_transaction: "64"
 
 # affinity rules TODO: convert to best practice setting per "toYaml" as above for more flexibility
 affinityEnabled: false
