--- a/zalando-pg/values.yaml
+++ b/zalando-pg/values.yaml
@@ -21,10 +21,10 @@ resources:
 # These are too small to actually run postgres! Therefore, default values are set here.
 # Adjust to your liking!
   requests:
-    cpu: "4"
-    memory: "4Gi"
+    cpu: "100m"
+    memory: "2Gi"
   limits:
-    cpu: "8"
+    cpu: "2"
     memory: "16Gi"
 
 teamId: "folio"
