--- a/zalando-pg/values.yaml
+++ b/zalando-pg/values.yaml
@@ -60,9 +60,9 @@ parameters:
   datestyle: "iso, dmy"
   timezone: 'Europe/Berlin'
   lc_messages: 'C'
-  lc_monetary: 'de_DE.UTF-8'
-  lc_numeric: 'de_DE.UTF-8'
-  lc_time: 'de_DE.UTF-8'
+  # lc_monetary: 'de_DE.utf8'
+  # lc_numeric: 'de_DE.utf8'
+  # lc_time: 'de_DE.utf8'
   default_text_search_config: 'pg_catalog.german'
 
   max_locks_per_transaction: "64"
