--- a/global-values.yaml
+++ b/global-values.yaml
@@ -29,13 +29,14 @@ global:
     secretName: s3storage-access
   okapi:
     serviceName: okapi
-    secureSupertenant: True
+    secureSupertenant: False
     port: 9130
     repositoryName: okapi
-    version: v5.2.0
-  image:
-    pullsecret: gitlab-folio-group
+    version: v5.2.0 # R2-2023 (Poppy) Version
+  image: # Okapi Image
+    pullsecret: folio-hbz-dockerhub-key
     repositoryBaseUrl: gitlab.bib-bvb.de:5050/folio-public/
+    # repositoryBaseUrl: hub.docker.com/r/folioci/
     folioToolsTag: "v1.1"
     okapiTag: okapi
     okapiVersion: "v5.2.0"
