Deployment Postgres mit Okapi-Passwort in global-values.yaml

--- a/zalando-pg/templates/scripts.yaml
+++ b/zalando-pg/templates/scripts.yaml
@@ -1,3 +1,4 @@
+{{- if not (lookup "v1" "ConfigMap" $.Release.Name "-scripts" ) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -36,4 +37,4 @@ data:
     log "Init script is completed";
 
     
-
+{{- end }}
