--- a/zalando-pg/templates/scripts.yaml
+++ b/zalando-pg/templates/scripts.yaml
@@ -28,10 +28,10 @@ data:
     log "Running: psql -w -v ON_ERROR_STOP=1 -h $PG_HOST -p $PG_PORT -U $PG_USER  ...";
 
     psql -w -v ON_ERROR_STOP=1 -h "$PG_HOST" -p "$PG_PORT" -U "$PG_USER" <<-EOSQL
-    CREATE ROLE okapi WITH PASSWORD '$OKAPI_PASSWORD' LOGIN CREATEDB;
-    CREATE DATABASE okapi WITH OWNER okapi;
-    CREATE ROLE folio WITH PASSWORD '$FOLIO_PASSWORD' LOGIN SUPERUSER;
-    CREATE DATABASE folio WITH OWNER folio;
+    CREATE ROLE $OKAPI_USERNAME WITH PASSWORD '$OKAPI_PASSWORD' LOGIN CREATEDB;
+    CREATE DATABASE $OKAPI_DATABASE WITH OWNER $OKAPI_USERNAME;
+    CREATE ROLE $FOLIO_USERNAME WITH PASSWORD '$FOLIO_PASSWORD' LOGIN SUPERUSER;
+    CREATE DATABASE $FOLIO_DATABASE WITH OWNER $FOLIO_USERNAME;
     EOSQL
 
     log "Init script is completed";
