--- a/modules/templates/backend-module.init.job.yaml
+++ b/modules/templates/backend-module.init.job.yaml
@@ -16,21 +16,11 @@ spec:
         envFrom:
         - configMapRef:
             name: {{ template "folio.backend.fullname" . }}-env
-        env:
-        - name: DB_HOST
-          value: {{ $.Values.global.db.host | quote }}
-        - name: DB_PORT
-          value: {{ $.Values.global.db.port | default "5432" | quote }}
-        - name: DB_DATABASE
-          value: {{ $.Values.global.db.folioName | default "folio" | quote }}
-        - name: DB_USERNAME
-          value: {{ $.Values.global.db.folioUser | default "folio" | quote }}
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: {{ $.Values.global.db.folioSecret }}
-              key: {{ $.Values.global.db.folioPwKey }}
+        envFrom:
+        - secretRef:
+            name: {{ $.Values.global.db.folioSecret }}
         {{- if $.Values.global.okapi.secureSupertenant }}
+        env:
         - name: SUPERUSER_PASSWORD
           valueFrom:
             secretKeyRef:
