--- a/tenant/values.yaml
+++ b/tenant/values.yaml
@@ -13,14 +13,14 @@
 imagePullSecrets: []
 
 image:
-  folioToolsTag: v1.3
+  folioToolsTag: debian-v1.3-debug2
   okapicliRepo: okapiclient
   okapicliTag: v0.21
   repositoryBaseUrl: gitlab.bib-bvb.de:5050/folio-public/
   stripesBaseUrl: gitlab.bib-bvb.de:5050/folio-public/
   pullPolicy: IfNotPresent
   # here you can overwrite the stripes image tag
-  # stripesTag: "poppy-csp2"
+  stripesTag: "poppy-csp2-complete-2"
 
 
 #
@@ -47,8 +47,8 @@ tenants:
     # set to true
     secureOkapi: false
     #
-    # Hostname fpr stripes
-    # host: folio.example.com
+    # Hostname for stripes
+    host: folio-k8s1.folio.hbz-nrw.de
     #
     path: /
     # 
@@ -62,6 +62,7 @@ tenants:
   loadSample: false
   name: Datalogisk Institut diku
   tenantId: diku
+  clientAdminAccount: admin
   # register tenant in Okapi
   register: true
   # email configuration
